--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -1,120 +1,128 @@
-# 数据格式可以为 yaml(文件以.yml结尾) 或者json(文件以.json结尾)
-# 如果YAML格式的数据请先检查格式是否有误，可选检查工具 http://www.yamllint.com
-
-title: "简历标题"
+title: "个人简历"
 lang: "zh" #语言设置 zh表示中文 en 表示英语
-name: "你的名字"
-jobtitle: "求职意向" #可空不显示
-photo: "assets/img/photo.jpg" #照片可空，不显示
+name: "李浩楠"
+jobtitle: "嵌入式软件开发"
+photo: "assets/img/photo.png"
 
 #联系方式
-contact: #联系方式连接等3~5行
-- text: "youremail@example.com" #文本内容
-  href: 'mailto:youremail@example.com' #链接，无链接则空  
-  icon: 'icons/email.svg' #图标 svg文件
-- text: "1234567890"
-  href: 'tel:1234567890'
-  icon: 'icons/phone.svg'
-- text: "your-website.com"
-  href: 'http://your-website.com'
-  icon: 'icons/web.svg'
-- text: "GitHubID"
-  href: 'https://github.com/NewFuture'
-  icon: "icons/github.svg"
-  attr: 'target="_blank"' #新标签页打开
-  # - text: "地址"
-  #   icon: "icons/location.svg"
+contact:
+  - text: "haonan.brillant@gmail.com"
+    href: "mailto:youremail@example.com"
+    icon: "icons/email.svg"
+  - text: "13140089756"
+    href: "tel:1234567890"
+    icon: "icons/phone.svg"
+    attr: 'target="_blank"'
+  - text: "your-website.com"
+    href: "http://your-website.com"
+    icon: "icons/web.svg"
+    attr: 'target="_blank"'
+  - text: "Abrillant-Lee"
+    href: "https://github.com/NewFuture"
+    icon: "icons/github.svg"
+    attr: 'target="_blank"'
+    # - text: "地址"
+    #   icon: "icons/location.svg"
 
 #main下面是主体内容，类别条数不限
 main: #简历主要内容，
-- type: education #类别为ID
-  name: 教育 #显示名称，空则使用type
-  content: #内容基本格式 标题-副标题-日期-详细内容 (都允许空)
-  - title: 大学名称
-    duration: "2011年x月 - 2015年"
-    sub: 地点或学历
-    detail: 专业或者简短说明
-  - title: Your University
-    duration: Aug 2007 - Jun 2011
-    sub: Ut enim ad minim veniam
-    detail: Master Bachelor of Computer Science & Technology.
+  - type: education #类别为ID
+    name: 教育
+    content:
+      - title: 郑州轻工业大学
+        duration: 2022 年 09 月 - 至今
+        sub: 本科
+        detail: 计算机技术与科学(嵌入式软件)
 
-- type: skills
-  # name: "技能"
-  content:
-  - title: 编程语言
-    items: #itmems 可以小块的方式显示
-    - 汉语
-    - 语言2
-    - 语言3
-  - title: Skill Group
-    summary: Consectetur, Adipiscing, Elit
+  - type: skills
+    name: 技能
+      - title: 技术栈和编程语言
+        name: 技能
+        items:
+          - Linux
+          - Docker
+          - Fusion360
+          - 编程语言: C、C++、Python、Shell
+      - title: 硬件技能
+        detail:
+          1. 熟悉 ESP32、STM32 和 Arduino 等 MCU 的外围电路设计及其软件开发;
+          2. 熟练使用 Fusion36等建模，能够进行产品结构和外观设计 <br>
+      - title: 软件技能
+       detail:
+         1. 熟练Git、Docker工具使用，
+         2. 练使用VIM进行日常开发, 目前使用的是Vscode+vim, Powershell+vim, Obsidian+vim日常开发
+      - title: 其他技能
+        detail:
+        1. 熟悉各种开源平台与软硬件资源，有独立研发简单机器人和智能产品的能力 <br> &nbsp; &numsp;
+        2. 良好的专业英语文档和资料阅读和使用能力 <br> &nbsp; &numsp;
+        3. 较强的信息检索能力，能够快速学习新技术与开发环境，适应不同项目需求 <br> &nbsp; &numsp;
+        4. 一定的沟通表达能力，能够与不同技术背景的人交流技术问题和方案
 
-- type: experience
-  name: 经验
-  content:
-  - title: 职位
-    sub: 某某公司
-    duration: "xxxx年xx月 - yyyy年yy月"
-    tags:
-    - 标签
-    summary: 职务或者工作总结(自动折叠)
-    detail: 同时包含 summary和detail在Chrome，Safari(包括IOS)，Android和新版Firefox等会自动折叠，不支持折叠的浏览器和展开后表现一致
-    # open: open
-    #可以设置open默认展开
-  - title: Job Title
-    sub: Your 2nd, Inc.  
-    duration: Apr 2013 - Mar 2016
-    tags: 
-    - tagname
-    summary: Summary your job or work. (Collapse)
-    detail: Details can be collapsed in Chrome Safari, Firefox, Opera and so on. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-- type: projects
-  name: Projects
-  content:
-  - title: 项目名称
-    duration: xxxx年xx月 - yyyy年yy月
-    detail: 项目和工作介绍，项目总结.
-    sub: 维护者
-  - title: Project Name
-    summary: Projects' introduction or summary
-    detail:
-      md: _data/demo.md
-    sub: Creator and maintainer.
-   #可继续添加更多内容
+  - type: experience
+    name: 经历
+    content:
+      - title: 梅科尔工作室 (Maker Studio)
+        duration: "2022年09月 - 至今"
+        tags:
+          - 学校组织 
+        summary: 管理层、项目负责人
+        detail: 同时包含 summary和detail在Chrome，Safari(包括IOS)，Android和新版Firefox等会自动折叠，不支持折叠的浏览器和展开后表现一致
+        # open: open
+        #可以设置open默认展开
+      - title: Job Title
+        sub: Your 2nd, Inc.
+        duration: Apr 2013 - Mar 2016
+        tags:
+          - tagname
+        summary: Summary your job or work. (Collapse)
+        detail: Details can be collapsed in Chrome Safari, Firefox, Opera and so on. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+  - type: projects
+    name: Projects
+    content:
+      - title: 项目名称
+        duration: xxxx年xx月 - yyyy年yy月
+        detail: 项目和工作介绍，项目总结.
+        sub: 维护者
+      - title: Project Name
+        summary: Projects' introduction or summary
+        detail:
+          md: _data/demo.md
+        sub: Creator and maintainer.
+        #可继续添加更多内容
 
 #others 其他简略内容(列表)
 others: #其他列表显示
-- type: others #ID可以为空
-  name: '其他'
-  content: #选择需要的格式
-  - 单行文字
-  - title: "加粗:"
-    text: "列表项二"
-  - title: "兴趣:"
-    items: #单行列表
-    - 睡觉
-    - 吃饭
-    - coding
-  - title: 列表
-    list:
-    - 第一项
-    - 第二项
-#- type: 
+  - type: others #ID可以为空
+    name: "其他"
+    content: #选择需要的格式
+      - 单行文字
+      - title: "加粗:"
+        text: "列表项二"
+      - title: "兴趣:"
+        items: #单行列表
+          - 睡觉
+          - 吃饭
+          - coding
+      - title: 列表
+        list:
+          - 第一项
+          - 第二项
+#- type:
 #  name: '其他'
 #  content: #选择需要的格式
 #  - 单行文字
 #  - 如果有可以继续添加
 
-#footer 脚注，打印版和web版不同不显示    
+#footer 脚注，打印版和web版不同不显示
 footer: #脚注多组
   print: #打印版markdown或者html
   screen:
-  - text: "简历脚注"
-  #   href: '/'
-  - text: "Made with &hearts; by NewFuture"
-    href: "https://github.com/NewFuture/CV/"
+    - text: "简历脚注"
+    #   href: '/'
+    - text: "Made with &hearts; by NewFuture"
+      href: "https://github.com/NewFuture/CV/"
 
 #页面额外js脚本，如xx统计
 scripts:
