--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -44,18 +44,21 @@ main: #简历主要内容，
           - 编程语言:C、C++、Python、Shell
       - title: 硬件技能
         detail:
-          1. 熟悉 ESP32、STM32 和 Arduino 等 MCU 的外围电路设计及其软件开发;
-          2. 熟练使用 Fusion36等建模，能够进行产品结构和外观设计 <br>
+          1.熟悉 STM32、ESP32 、Hi3861等 MCU 的外围电路设计及其软件开发；
+          2.熟悉树莓派、Atlas-DK-200、imx6ull等linux系统开发板开发
+          3.了解嘉立创EDA、Fusion、solidworks等建模和电子设计工具
+
       - title: 软件技能
         detail:
-          1. 熟练Git、Docker工具使用，
-          2. 练使用VIM进行日常开发, 目前使用的是Vscode+vim, Powershell+vim, Obsidian+vim日常开发
+          1.前端：了解Web三件套、echatjs图表库、微信小程序、鸿蒙开发
+          2.后端：熟练linxu系统命令行开发，了解mysql、opengauss数据库，django框架开发
+          3.算法：了解pytroch、mindspore框架的基础使用
+          4.工具：熟练vim、git、docker工具使用
       - title: 其他技能
         detail:
           1. 熟悉各种开源平台与软硬件资源，有独立研发简单机器人和智能产品的能力 <br> &nbsp; &numsp;
-          2. 良好的专业英语文档和资料阅读和使用能力 <br> &nbsp; &numsp;
-          3. 较强的信息检索能力，能够快速学习新技术与开发环境，适应不同项目需求 <br> &nbsp; &numsp;
-          4. 一定的沟通表达能力，能够与不同技术背景的人交流技术问题和方案
+          2. 较强的信息检索能力，能够快速学习新技术与开发环境，适应不同项目需求 <br> &nbsp; &numsp;
+          3. 一定的沟通表达能力，能够与不同技术背景的人交流技术问题和方案
 
 
   - type: experience
@@ -77,11 +80,11 @@ main: #简历主要内容，
         summary: Summary your job or work. (Collapse)
         detail: Details can be collapsed in Chrome Safari, Firefox, Opera and so on. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-  - type: projects
+  - type: 项目 
     name: Projects
     content:
-      - title: 项目名称
-        duration: xxxx年xx月 - yyyy年yy月
+      - title: 基于多传感器融合的五轴数控联动系统
+        duration: 2023年3月 - 2023年9月
         detail: 项目和工作介绍，项目总结.
         sub: 维护者
       - title: Project Name
